# Fast-copy

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  package-lock.json  package.json  run-tests.bat  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-06-27-tauri-ui-design.md  2026-06-28-progress-feedback-design.md
src/: App.tsx  api.ts  config.rs  main.rs  store.test.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  commands.rs  config.rs  dto.rs  main.rs  scan_progress.rs  sources.rs  state.rs  trace.rs
src-tauri/src/benchmark/: runner.rs
src-tauri/src/engine/: copier.rs  copy_item.rs  journal.rs  mod.rs  pipeline.rs  stub.rs  win32.rs  worker.rs
src/benchmark/: mod.rs  runner.rs
src/components/: ActionBar.tsx  BenchmarkChip.tsx  CompletionSummary.tsx  ProgressDock.tsx  QueuePanel.tsx  ScanProgressView.tsx  SettingsModal.tsx  SourceTree.tsx  SourcesPanel.tsx  Spinner.tsx  ThroughputChart.tsx  Toast.tsx  TopBar.tsx  icons.tsx
src/engine/: stub.rs  win32.rs  worker.rs
src/gui/: app.rs  mod.rs  source_tree.rs  style.rs
src/utils/: format.test.ts  format.ts
