[package]
name = "fast-copy"
version = "0.1.0"
edition = "2021"
description = "Adaptive Windows file copy tool with dynamic buffered/unbuffered I/O selection"
license = "MIT"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 3
